--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
         <a href="{{ '/' | absolute_url }}">
           <h1>Terry Hosting</h1>
         </a>
-        <h2>We're here to help your website blast off! Through creative ideas, innovation & technology.</h2>
+        <h2>We're here to help your website blast off!</h2>
       </div>
     </header>
 
