Add sign up page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,8 +31,7 @@
         </section>
 
         <aside id="sidebar">
-          <a href="/" class="button">Home</a>
-          <a href="/sign-up" class="button">Sign Up</a>
+          <img src="assets/images/logo.png" width="100%">
         </aside>
       </div>
     </div>
